@@ -1,0 +1,47 @@
+0 info it worked if it ends with ok
+1 verbose cli [ '/home/ubuntu/.nvm/versions/node/v6.11.2/bin/node',
+1 verbose cli   '/home/ubuntu/.nvm/versions/node/v6.11.2/bin/npm',
+1 verbose cli   'start' ]
+2 info using npm@3.10.10
+3 info using node@v6.11.2
+4 verbose run-script [ 'prestart', 'start', 'poststart' ]
+5 info lifecycle studentsite@0.0.0~prestart: studentsite@0.0.0
+6 silly lifecycle studentsite@0.0.0~prestart: no script for prestart, continuing
+7 info lifecycle studentsite@0.0.0~start: studentsite@0.0.0
+8 verbose lifecycle studentsite@0.0.0~start: unsafe-perm in lifecycle true
+9 verbose lifecycle studentsite@0.0.0~start: PATH: /home/ubuntu/.nvm/versions/node/v6.11.2/lib/node_modules/npm/bin/node-gyp-bin:/home/ubuntu/workspace/ascent/node_modules/.bin:/home/ubuntu/.nvm/versions/node/v6.11.2/bin:/usr/local/rvm/gems/ruby-2.4.0/bin:/usr/local/rvm/gems/ruby-2.4.0@global/bin:/usr/local/rvm/rubies/ruby-2.4.0/bin:/mnt/shared/bin:/home/ubuntu/workspace/node_modules/.bin:/home/ubuntu/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/mnt/shared/sbin:/opt/gitl:/opt/go/bin:/mnt/shared/c9/app.nw/bin:/usr/local/rvm/bin
+10 verbose lifecycle studentsite@0.0.0~start: CWD: /home/ubuntu/workspace/ascent
+11 silly lifecycle studentsite@0.0.0~start: Args: [ '-c', 'node app.js' ]
+12 silly lifecycle studentsite@0.0.0~start: Returned: code: 1  signal: null
+13 info lifecycle studentsite@0.0.0~start: Failed to exec start script
+14 verbose stack Error: studentsite@0.0.0 start: `node app.js`
+14 verbose stack Exit status 1
+14 verbose stack     at EventEmitter.<anonymous> (/home/ubuntu/.nvm/versions/node/v6.11.2/lib/node_modules/npm/lib/utils/lifecycle.js:255:16)
+14 verbose stack     at emitTwo (events.js:106:13)
+14 verbose stack     at EventEmitter.emit (events.js:191:7)
+14 verbose stack     at ChildProcess.<anonymous> (/home/ubuntu/.nvm/versions/node/v6.11.2/lib/node_modules/npm/lib/utils/spawn.js:40:14)
+14 verbose stack     at emitTwo (events.js:106:13)
+14 verbose stack     at ChildProcess.emit (events.js:191:7)
+14 verbose stack     at maybeClose (internal/child_process.js:891:16)
+14 verbose stack     at Process.ChildProcess._handle.onexit (internal/child_process.js:226:5)
+15 verbose pkgid studentsite@0.0.0
+16 verbose cwd /home/ubuntu/workspace/ascent
+17 error Linux 4.9.17-c9
+18 error argv "/home/ubuntu/.nvm/versions/node/v6.11.2/bin/node" "/home/ubuntu/.nvm/versions/node/v6.11.2/bin/npm" "start"
+19 error node v6.11.2
+20 error npm  v3.10.10
+21 error code ELIFECYCLE
+22 error studentsite@0.0.0 start: `node app.js`
+22 error Exit status 1
+23 error Failed at the studentsite@0.0.0 start script 'node app.js'.
+23 error Make sure you have the latest version of node.js and npm installed.
+23 error If you do, this is most likely a problem with the studentsite package,
+23 error not with npm itself.
+23 error Tell the author that this fails on your system:
+23 error     node app.js
+23 error You can get information on how to open an issue for this project with:
+23 error     npm bugs studentsite
+23 error Or if that isn't available, you can get their info via:
+23 error     npm owner ls studentsite
+23 error There is likely additional logging output above.
+24 verbose exit [ 1, true ]
