@@ -4,7 +4,6 @@ $(function() {
         url: '/api/rubrics',
         method: 'GET',
         success: function (response) {
-            console.log('getting rubric');
             response.forEach(function(rubricName) {
                 $('#rubricName').append($('<option>', {
                     value: rubricName.rubricName,
