@@ -1,0 +1,3 @@
+.input-group-addon {
+    width: 40px;
+}
